--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-heapless = "0.9.1"
+heapless = "=0.8.0" # 0.9.1 Does not work: https://github.com/rust-embedded/heapless/issues/599
